--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,63 @@
-.App {
-  text-align: center;
+*{
+  font-family: 'Poppins', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
+.nav-link {
+  color: #275386;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-link:hover{
+  color: #001B3D;
+}
+
+body{
+  background-color: #f8f8f8;
+}
+
+body, html{
+  height: 100%;
+}
+
+#root{
+  height: 100%;
+}
+
+.App{
+  height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.wrap-sidemenu{
+  height: 100%;
+  width: 20%;
+}
+
+.wrap-content{
+  width: 80%;
+}
+
+.sidemenu{
+  -webkit-box-shadow: 3px 0px 14px 2px rgba(199,199,199,0.39);
+-moz-box-shadow: 3px 0px 14px 2px rgba(199,199,199,0.39);
+box-shadow: 3px 0px 14px 2px rgba(199,199,199,0.39);
+  height: 100%;
+  background-color: #fff;
+}
+
+.sidemenu .nav-item{
+  transition: all .3s;
+  
+}
+
+.sidemenu .nav-item:hover{
+  background-color: #f8f8f8;
+}
+
+.img-profile{
+  width: 30px;
+  height: 30px;
+}
+
+.brand img{
+  max-height: 50px;
 }
